:wrench: Configure build cli params.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base /react-flow-web-audio --outDir docs",
     "preview": "vite preview"
   },
   "dependencies": {
